--- a/15-github-basics.qmd
+++ b/15-github-basics.qmd
@@ -14,7 +14,7 @@ By the end of this lesson, you will be able to:
 -   Understand branching and merging concepts
 :::
 
-## What is Version Control?
+## 1 What is Version Control?
 
 Version control is a system that records changes to files over time so that you can recall specific versions later. For data science projects, version control helps you:
 
@@ -29,7 +29,7 @@ Version control is a system that records changes to files over time so that you 
 **Git** is a distributed version control system that tracks changes in any set of files. **GitHub** is a web-based platform that hosts Git repositories and adds collaboration features.
 :::
 
-## Why Use Git and GitHub?
+## 2 Why Use Git and GitHub?
 
 For data scientists and researchers, Git and GitHub provide several benefits:
 
@@ -39,9 +39,9 @@ For data scientists and researchers, Git and GitHub provide several benefits:
 -   **Reproducibility**: Others can access and run your exact code
 -   **Open science**: Share your work with the broader community
 
-## Setting Up Git
+## 3 Setting Up Git
 
-### Installing Git
+### 3.1 Installing Git
 
 First, you need to install Git on your computer:
 
@@ -49,7 +49,7 @@ First, you need to install Git on your computer:
 -   **Mac**: Install via Homebrew with `brew install git` or download from [git-scm.com](https://git-scm.com/)
 -   **Linux**: Use your package manager, e.g., `sudo apt-get install git`
 
-### Configuring Git
+### 3.2 Configuring Git
 
 After installation, configure Git with your name and email:
 
@@ -58,15 +58,15 @@ git config --global user.name "Your Name"
 git config --global user.email "your.email@example.com"
 ```
 
-## Creating a GitHub Account
+## 4 Creating a GitHub Account
 
 1.  Go to [github.com](https://github.com/)
 2.  Click "Sign up" and follow the instructions
 3.  Choose a free plan to start
 
-## Git Basics
+## 5 Git Basics
 
-### Key Concepts
+### 5.1 Key Concepts
 
 -   **Repository (repo)**: A directory where Git tracks changes
 -   **Commit**: A snapshot of changes at a point in time
@@ -76,9 +76,9 @@ git config --global user.email "your.email@example.com"
 -   **Push**: Sending commits to a remote repository
 -   **Pull**: Getting changes from a remote repository
 
-### Creating a Repository
+### 5.2 Creating a Repository
 
-#### On GitHub:
+#### 5.2.1 On GitHub:
 
 1.  Log in to GitHub
 2.  Click the "+" icon in the top-right corner
@@ -87,7 +87,7 @@ git config --global user.email "your.email@example.com"
 5.  Choose public or private
 6.  Click "Create repository"
 
-#### On Your Computer:
+#### 5.2.2 On Your Computer:
 
 ``` bash
 # Create a new directory
@@ -101,7 +101,7 @@ git init
 git remote add origin https://github.com/yourusername/my-project.git
 ```
 
-### Basic Git Workflow
+### 5.3 Basic Git Workflow
 
 The typical Git workflow involves these steps:
 
@@ -127,7 +127,7 @@ git commit -m "Add data cleaning script"
 git push origin main
 ```
 
-### Cloning an Existing Repository
+### 5.4 Cloning an Existing Repository
 
 To work with an existing repository:
 
@@ -139,7 +139,7 @@ git clone https://github.com/username/repository.git
 cd repository
 ```
 
-### Pulling Changes
+### 5.5 Pulling Changes
 
 When working with others, you'll need to get their changes:
 
@@ -148,11 +148,11 @@ When working with others, you'll need to get their changes:
 git pull origin main
 ```
 
-## Branching and Merging
+## 6 Branching and Merging
 
 Branches allow you to work on different features or experiments without affecting the main codebase.
 
-### Creating and Using Branches
+### 6.1 Creating and Using Branches
 
 ``` bash
 # Create a new branch
@@ -168,7 +168,7 @@ git checkout -b new-feature
 git branch
 ```
 
-### Merging Branches
+### 6.2 Merging Branches
 
 Once you're satisfied with your changes:
 
@@ -183,11 +183,11 @@ git merge feature-analysis
 git push origin main
 ```
 
-## Using GitHub for Collaboration
+## 7 Using GitHub for Collaboration
 
 GitHub enhances Git with collaboration features:
 
-### Pull Requests
+### 7.1 Pull Requests
 
 Pull requests (PRs) let you propose changes to a repository:
 
@@ -197,7 +197,7 @@ Pull requests (PRs) let you propose changes to a repository:
 4.  Push your branch to your fork
 5.  Create a pull request to the original repository
 
-### Issues
+### 7.2 Issues
 
 GitHub Issues help track tasks, enhancements, and bugs:
 
@@ -206,7 +206,7 @@ GitHub Issues help track tasks, enhancements, and bugs:
 -   Label issues by type
 -   Reference issues in commits and pull requests
 
-## Git and RStudio Integration
+## 8 Git and RStudio Integration
 
 RStudio provides a user-friendly interface for Git operations:
 
@@ -214,7 +214,7 @@ RStudio provides a user-friendly interface for Git operations:
 2.  Use the Git pane to stage, commit, and push changes
 3.  View file differences and history
 
-## Best Practices for Data Science Projects
+## 9 Best Practices for Data Science Projects
 
 -   **Commit often**: Make small, focused commits
 -   **Write clear commit messages**: Explain what and why, not how
@@ -222,7 +222,7 @@ RStudio provides a user-friendly interface for Git operations:
 -   **Structure your repository**: Follow a consistent organization pattern
 -   **Document your workflow**: Include a README with setup instructions
 
-## Exercises
+## 10 Practice Exercises
 
 ::: {.callout-note appearance="minimal"}
 ### Exercise 1
