Remove references to the Slack community from multiple QMD and HTML files, replacing them with a note about a Discord community coming soon. Update footer content to maintain consistency across documentation.

--- a/about.qmd
+++ b/about.qmd
@@ -66,7 +66,6 @@ This bootcamp is continuously improved based on:
 
 We offer several ways to get help during your learning journey:
 
--   Join our [Slack community](https://join.slack.com/t/ha-eda-party/shared_invite/zt-w19od3dz-6bjo~dTC_GQeSUUv3B8XzQ) for peer support
--   Check the FAQ section for common questions
+-   Discord coming soon
 -   Explore additional resources linked throughout the course
 
